# CreativeBot

./: .eslintrc.json  .gitignore  CreativeBot.sln  LICENSE  README  README.md  config.json  ecosystem.config.js  index.js  nodemon.json  package-lock.json  package.json  push.bat  tsconfig.json
CreativeBot/: CMakeLists.txt  Main.cpp
CreativeBot/Commands/: CommandsList.hpp  Test.cpp  Test.hpp
commands/: embed.js  gameidea.js  help.js  ping.js  rekt.js  reply.js  slots.js  socials.js
commands/admin/: test.js
commands/credits/: changecredits.js  credits.js
commands/events/: submit.js  toggleevent.js
commands/fun/: gameidea.js  math.js  obama.js  rekt.js  slots.js  thumbsup.js
commands/info/: help.js  socials.js
events/: error.js  message.js  ready.js
locales/en/: translation.json
scripts/: admincheck.js  creditshandler.js  eventhandler.js  logchamp.js
src/: config.json  deploy-commands.ts  index.ts
src/commands/admin/: stop.ts  testcmd.ts
src/commands/credits/: changecredits.test.ts  changecredits.ts  credits.ts
src/commands/events/: react.ts  setevent.ts  submit.js  submit.ts  toggleevent.ts
src/commands/fun/: gameidea.js  gameidea.test.ts  gameidea.ts  math.test.ts  math.ts  obama.js  obama.ts  slots.test.ts  (+3 more)
src/events/: error.ts  interaction.ts  message.js  message.ts  reaction.ts  ready.ts  warn.ts
src/scripts/: admincheck.js  admincheck.ts  canvashelper.ts  commanddef.ts  commandfactory.ts  creditshandler.ts  discordutil.ts  eventdef.ts  eventhandler.ts  localizer.ts  logchamp.ts  timedjobs.ts  tokentableaccessor.ts  uifunctions.ts
(+22 files in other folders)
